# opengllerning

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  readme.md
cfg/: readme.txt
cl_kernels/: first_cl_module.cl  ray_triangle_intersect.cl
shaders/: ray.frag  ray.vert  reflect.frag  reflect.vert  refract.frag  refract.vert  screen.frag  screen.vert  shader.frag  shader.vert  skybox.frag  skybox.vert  stencil.frag
src/: 3Dcube.cpp  ConstructionContainer.cpp  ConstructionContainer.h  GUI_MainFrame.cpp  GUI_MainFrame.h  GUI_Manipulator.cpp  GUI_Manipulator.h  camera.cpp  camera.h  cassete.cpp  cassete.h  cl_kernel_container.cpp  cl_kernel_container.h  cl_mesh.cpp  cl_mesh.h  gui.cpp  gui.h  load_tex.cpp  load_tex.h  main.cpp  main_frame.cpp  main_frame.h  manipulator.cpp  manipulator.h  mesh.cpp  mesh.h  model.cpp  model.h  movement_program.cpp  movement_program.h  opencl_main.cpp  rangefinder.cpp  rangefinder.h  remote_manipulator.cpp  remote_manipulator.h  shader.cpp  shader.h
